<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_loadapp">LoadApp - Current repository from GitHub</string>
    <string name="download_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="download_channel_desc">Shows download status</string>

    <string name="download_error">Please select a file to download.</string>

    <string name="download">Download</string>

    <string name="download_active">File Is Downloading</string>
    <string name="download_finished">File Downloaded</string>

    <string name="check_status">Check Status</string>

    <string name="detail_filename">Filename Downloaded: %s</string>
    <string name="detail_success">Success: %s</string>
    <string name="okay">Okay</string>
</resources>
