<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity"
    tools:showIn="@layout/activity_detail"
    android:id="@+id/motion_layout"
    app:layoutDescription="@xml/activity_detail_scene"
    tools:showPaths="true">

    <TextView
        android:id="@+id/textview_filename"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_filename"
        tools:text="@string/detail_filename" />

    <TextView
        android:id="@+id/textview_success"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/detail_success"
        tools:text="@string/detail_success" />

    <Button
        android:id="@+id/okay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay" />



</androidx.constraintlayout.motion.widget.MotionLayout>



